feat: added app shell ui to hold all the apps
